language/move-lang/tests/move_check/parser/function_return_type_missing.exp
error: 

   ┌── tests/move_check/parser/function_return_type_missing.move:3:10 ───
   │
 3 │     f(): { }
   │          ^ Unexpected '{'
   ·
 3 │     f(): { }
   │          - Expected a type name
   │

